--- a/app/templates/partials/page_header.html
+++ b/app/templates/partials/page_header.html
@@ -10,20 +10,22 @@
 									</div>
 									<div class="col-sm-9 text-left">
 										{% if load is defined %}
-											{% if edit %}
-												<a class="btn btn-light-grey back-step " href="javascript:history.back()">
-													<i class="fa fa-circle-arrow-left"></i> Cancel
-												</a>
-												<label for="submit" class="btn btn-primary">Submit</label>
-											{% endif %}
+											{% if load.status != "Complete" %}
+												{% if edit %}
+													<a class="btn btn-light-grey back-step " href="javascript:history.back()">
+														<i class="fa fa-circle-arrow-left"></i> Cancel
+													</a>
+													<label for="submit" class="btn btn-primary">Submit</label>
+												{% endif %}
 
-											<a href="{{ url_for('loads.edit', load_id=load.id) }}" class="btn btn-primary">Edit</a>
-											<a href="{{ url_for('.add_location', load_id=load.id) }}" class="new-modal btn btn-green">
-												Add Location <i class="fa fa-plus"></i>
-											</a>
-											
-											{% if load.assigned_driver is not none %}
-												<a href="javascript:ping_driver({{ load.assigned_driver.truck.id }});" class="new-modal btn btn-green">Ping Driver</a>
+												<a href="{{ url_for('loads.edit', load_id=load.id) }}" class="btn btn-primary">Edit</a>
+												<a href="{{ url_for('.add_location', load_id=load.id) }}" class="new-modal btn btn-green">
+													Add Location <i class="fa fa-plus"></i>
+												</a>
+												
+												{% if load.assigned_driver is not none %}
+													<a href="javascript:ping_driver({{ load.assigned_driver.truck.id }});" class="new-modal btn btn-green">Ping Driver</a>
+												{% endif %}
 											{% endif %}
 										{% endif %}
 										{% if truck is defined %}
