--- a/app/templates/static/contact.html
+++ b/app/templates/static/contact.html
@@ -61,7 +61,7 @@
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav navbar-right">
-							<li class="active">
+							<li class="">
 								<a href="{{ url_for('.index') }}">
 									HOME
 								</a>
@@ -76,7 +76,7 @@
 									GET A DEMO
 								</a>
 							</li>
-							<li class="">
+							<li class="active">
 								<a class="" href="{{ url_for('.contact') }}">
 									CONTACT US
 								</a>
@@ -127,6 +127,14 @@
 							data-start="3000"
 							data-easing="easeOutExpo">
 								Learn More!
+							</a>
+							<a class="caption lft btn btn-red slide_btn slide_item_left" href="http://themeforest.net/item/clipone-bootstrap-3-responsive-admin-template/5881143?ref=Cliptheme"
+							data-x="100"
+							data-y="320"
+							data-speed="400"
+							data-start="3000"
+							data-easing="easeOutExpo">
+								Signup for Beta Access
 							</a>
 						</li>
 						<!-- end: FIRST SLIDE -->
