--- a/app/templates/load/view.html
+++ b/app/templates/load/view.html
@@ -7,13 +7,12 @@
 	    		<div class="col-sm-6">
 	        		<div class="panel panel-default">
 	            		<div class="panel-heading">
-	                		Map {{ location.address }}
+	                		Map
 	            		</div>
 	            		<div class="panel-body">
 		                	<div id="map-canvas" style="height: 400px; margin: 0; padding: 0;"></div>
 		                	<hr>
-		                	<form name="status" action="" role="form" class="form-horizontal" id="form" method="post">
-		                		{{ status_form.hidden_tag() }}
+
 			                	<table class="table table-bordered table-hover table-condensed" id="sample-table-1">
 				                    <thead>
 				                        <tr>
@@ -64,10 +63,10 @@
 										</button>
 									</div>
 								</div>-->
-							</form>
 	                	</div>
 	            	</div>
 	         	</div>
+	         	
          			<div class="col-sm-6">
 		        		<div class="panel panel-default">
 		            		<div class="panel-heading">
