--- a/app/templates/static/index.html
+++ b/app/templates/static/index.html
@@ -148,7 +148,7 @@
 									Efficiently run your business with our simple and easy to use load entry system that stores and provides access to all of your past and present load information.
 								</div>
 								<a class="view-more" href="#">
-									View More <i class="fa fa-angle-right"></i>
+									Learn More <i class="fa fa-angle-right"></i>
 								</a>
 							</div>
 						</div>
@@ -162,7 +162,7 @@
 									Eliminate the need for countless check calls. Our software automates driver communications and provides realtime tracking of your assets.
 								</div>
 								<a class="view-more" href="#">
-									View More <i class="fa fa-angle-right"></i>
+									Learn More <i class="fa fa-angle-right"></i>
 								</a>
 							</div>
 						</div>
@@ -176,7 +176,7 @@
 									Our dispatch software brings together the management of your trucks, trailers and drivers in one place linking your assets to your business.
 								</div>
 								<a class="view-more" href="#">
-									View More <i class="fa fa-angle-right"></i>
+									Learn More <i class="fa fa-angle-right"></i>
 								</a>
 							</div>
 						</div>
