landing page update

--- a/app/static/frontend/css/main.css
+++ b/app/static/frontend/css/main.css
@@ -2153,7 +2153,7 @@ div.flexslider {
 	text-transform: uppercase;
 }
 .slide_desc {
-	color: #7B8793;
+	color: #FFFFFF;
 	font-size: 14px;
 	line-height: 24px;
 }
