--- a/app/templates/static/index.html
+++ b/app/templates/static/index.html
@@ -115,10 +115,11 @@
 							</div>
 							<div class="caption lft slide_desc slide_item_left"
 							data-x="0"
-							data-y="240"
+							data-y="260"
 							data-speed="400"
 							data-start="2500"
 							data-easing="easeOutExpo">
+								Tron Logistics puts technology at the center of your business improving your operational<br /> efficiency and increasing your responsiveness to customers.
 							</div>
 							<a class="caption lft btn btn-green slide_btn slide_item_left" href="http://themeforest.net/item/clipone-bootstrap-3-responsive-admin-template/5881143?ref=Cliptheme"
 							data-x="0"
@@ -141,7 +142,7 @@
 						<div class="col-sm-4">
 							<div class="core-box">
 								<div class="heading">
-									<i class="clip-mobile circle-icon"></i>
+									<i class="fa fa-truck circle-icon"></i>
 									<h2>Load Administration</h2>
 								</div>
 								<div class="content">
@@ -155,7 +156,7 @@
 						<div class="col-sm-4">
 							<div class="core-box">
 								<div class="heading">
-									<i class="clip-clip circle-icon"></i>
+									<i class="fa fa-map-marker circle-icon"></i>
 									<h2>Track &amp; Trace</h2>
 								</div>
 								<div class="content">
@@ -169,7 +170,7 @@
 						<div class="col-sm-4">
 							<div class="core-box">
 								<div class="heading">
-									<i class="clip-cogs circle-icon"></i>
+									<i class="clip-users circle-icon"></i>
 									<h2>Fleet Management</h2>
 								</div>
 								<div class="content">
@@ -315,11 +316,12 @@
 		<footer id="footer">
 			<div class="container">
 				<div class="row">
+					<div class="col-md-2"></div>
 					<div class="col-md-3">
 						<div class="newsletter">
-							<h4>Newsletter</h4>
+							<h4>Mailing List</h4>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec hendrerit vehicula est, in consequat.
+								Please sign up to our mailing list to keep updated with new features.
 							</p>
 							<form method="POST" action="#" id="newsletterForm">
 								<div class="input-group">
@@ -332,7 +334,7 @@
 							</form>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<!--<div class="col-md-3">
 						<h4>Latest Tweet</h4>
 						<div class="twitter" id="tweet">
 							<i class="fa fa-twitter"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec hendrerit vehicula est, in consequat.
@@ -340,16 +342,12 @@
 								12 Dec
 							</a>
 						</div>
-					</div>
-					<div class="col-md-4">
+					</div>-->
+					<div class="col-md-2"></div>
+					<div class="col-md-3">
 						<div class="contact-details">
 							<h4>Contact Us</h4>
 							<ul class="contact">
-								<li>
-									<p>
-										<i class="fa fa-map-marker"></i><strong>Address:</strong> 1234 Street Name, City Name, United States
-									</p>
-								</li>
 								<li>
 									<p>
 										<i class="fa fa-phone"></i><strong>Phone:</strong> (123) 456-7890
@@ -358,15 +356,16 @@
 								<li>
 									<p>
 										<i class="fa fa-envelope"></i><strong>Email:</strong>
-										<a href="mailto:mail@example.com">
-											mail@example.com
+										<a href="mailto:contact@tronlogistics.com">
+											contact@tronlogistics.com
 										</a>
 									</p>
 								</li>
 							</ul>
 						</div>
 					</div>
-					<div class="col-md-2">
+					<div class="col-md-2"></div>
+					<!--<div class="col-md-2">
 						<h4>Follow Us</h4>
 						<div class="social-icons">
 							<ul>
@@ -387,23 +386,23 @@
 								</li>
 							</ul>
 						</div>
-					</div>
+					</div>-->
 				</div>
 			</div>
 			<div class="footer-copyright">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-1">
+						<div class="col-md-2">
 							<a class="logo" href="index.html">
-								CLIP<i class="clip-clip"></i>ONE
+								<img src="{{ static('frontend/images/wht_logo_25x25_72ppi.png') }}">
 							</a>
 						</div>
-						<div class="col-md-7">
+						<div class="col-md-6">
 							<p>
-								&copy; Copyright 2014 by Clip-One. All Rights Reserved.
+								&copy; Copyright 2015 by Tron Logistics. All Rights Reserved.
 							</p>
 						</div>
-						<div class="col-md-4">
+						<!--<div class="col-md-4">
 							<nav id="sub-menu">
 								<ul>
 									<li>
@@ -423,7 +422,7 @@
 									</li>
 								</ul>
 							</nav>
-						</div>
+						</div>-->
 					</div>
 				</div>
 			</div>
