Contact Page Update

--- a/app/templates/static/contact.html
+++ b/app/templates/static/contact.html
@@ -27,9 +27,7 @@
 		<link rel="stylesheet" href="{{ static('frontend/css/theme_blue.css') }}" type="text/css" id="skin_color">
 		<!-- end: MAIN CSS -->
 		<!-- start: CSS REQUIRED FOR THIS PAGE ONLY -->
-		<link rel="stylesheet" href="{{ static('frontend/plugins/revolution_slider/rs-plugin/css/settings.css') }}">
 		<link rel="stylesheet" href="{{ static('frontend/plugins/flex-slider/flexslider.css') }}">
-		<link rel="stylesheet" href="{{ static('frontend/plugins/colorbox/example2/colorbox.css') }}">
 		<!-- end: CSS REQUIRED FOR THIS PAGE ONLY -->
 		<!-- start: HTML5SHIV FOR IE8 -->
 		<!--[if lt IE 9]>
@@ -91,166 +89,121 @@
 		<!-- start: MAIN CONTAINER -->
 		<div class="main-container">
 			
-			<section>
-				<!-- start: CORE BOXES CONTAINER -->
+
+			<section class="page-top">
 				<div class="container">
-					<div class="row">
-						<div class="col-sm-8">
-							<h4>Drop us a note below</h4>
-							<div class="panel panel-default">
-								<form class="form form-inline">
-									<div class="form-group">
-									<label class="col-sm-4 control-label">
-										Name
-										{#{% for error in form.shipper.company_name.errors %}
-								            <br><span style="color: red;">{{ error }}</span>
-								          {% endfor %}#}
-									</label>
-									<div class="col-sm-7">
-										<input type="text"></input>
-									</div>
-								</div>
-						</div>
+					<div class="col-md-4 col-sm-4">
+						<h1>Contact Us</h1>
 					</div>
-				</div>
-				<!-- end: CORE BOXES CONTAINER -->
-			</section>
-			<!--<section class="wrapper wrapper-grey padding50">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12">
-							<h2 class="center">Track &amp; Manage</h2>
-							<hr>
-							<p class="center">
-								See the current &amp; future loads to plan &amp; optimize dispatching operations.
-							</p>
-							<div class="grid-container animate-group" data-animation-interval="100">
-								<div class="col-md-3 col-sm-6">
-									<div class="grid-item animate">
-										<a href="#">
-											<div class="grid-image">
-												<img src="{{ static('frontend/images/image01.jpg') }}" class="img-responsive"/>
-												<span class="image-overlay"> <i class="fa fa-mail-forward circle-icon circle-main-color"></i> </span>
-											</div>
-											<div class="grid-content">
-												4 Columns Portfolio
-											</div>
-										</a>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="grid-item animate">
-										<a href="#">
-											<div class="grid-image">
-												<img src="{{ static('frontend/images/image02.jpg') }}" class="img-responsive"/>
-												<span class="image-overlay"> <i class="fa fa-mail-forward circle-icon circle-main-color"></i> </span>
-											</div>
-											<div class="grid-content">
-												3 Columns Portfolio
-											</div>
-										</a>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="grid-item animate">
-										<a href="#">
-											<div class="grid-image">
-												<img src="{{ static('frontend/images/image03.jpg') }}" class="img-responsive"/>
-												<span class="image-overlay"> <i class="fa fa-mail-forward circle-icon circle-main-color"></i> </span>
-											</div>
-											<div class="grid-content">
-												2 Columns Portfolio
-											</div>
-										</a>
-									</div>
-								</div>
-								<div class="col-md-3 col-sm-6">
-									<div class="grid-item animate">
-										<a href="#">
-											<div class="grid-image">
-												<img src="{{ static('frontend/images/image04.jpg') }}" class="img-responsive"/>
-												<span class="image-overlay"> <i class="fa fa-mail-forward circle-icon circle-main-color"></i> </span>
-											</div>
-											<div class="grid-content">
-												Single Project
-											</div>
-										</a>
-									</div>
-								</div>
-							</div>
-							<hr>
-							<p class="center">
-								<a href="#">
-									View the Full Portfolio here
+					<div class="col-md-8 col-sm-8">
+						<ul class="pull-right breadcrumb">
+							<li>
+								<a href="{{ url_for('.index') }}">
+									Home
 								</a>
-							</p>
-						</div>
+							</li>
+							<li class="active">
+								Contact Us
+							</li>
+						</ul>
 					</div>
 				</div>
-			</section>-->
-			<!--<section class="wrapper padding50">
+			</section>
+			<section class="wrapper padding50">
 				<div class="container">
 					<div class="row">
-						<div class="col-sm-6">
-							<h2 style="text-align: right;">Load Planning and Dispatching, redefined</h2>
-							<hr class="fade-left">
-							<p style="text-align: right;">
-								21<super>st</super> century business solutions for carriers who operate 20 or fewer trucks
-							</p>
-							<p style="text-align: right;">
-								It is estimated that 97% of carriers in the United States operate 20 or fewer trucks, but these firms lack dedicated and affordable technology solutions to drive greater business value in the 21<super>st</super> century. The trucking industry grew up with America, but small firms have mssed the wave of technology. Tron Logistics has developed software specifically for this market to fill the gap. Stay in teh know by signing up to our e-mail list.
-							</p>
-							<hr class="fade-left">
-							<a href="#" class="btn btn-default pull-right"><i class="fa fa-info"></i> Learn more...</a>
+						<div class="col-md-6">
+							{% if success %}
+							<div id="contactSuccess" class="alert alert-success">
+								<strong>Success!</strong> Your message has been sent to us.
+							</div>
+							{% endif %}
+							{% if error %}
+							<div id="contactError" class="alert alert-error">
+								<strong>Error!</strong> There was an error sending your message.
+							</div>
+							{% endif %}
+							<h2>Contact Us</h2>
+								<form name="contact" action="" role="form" class="form" id="form" method="post">
+								{{ form.hidden_tag() }}
+								<div class="row">
+									<div class="form-group">
+										<div class="col-md-6">
+											<label>
+												Your name <span class="symbol required"></span>
+											</label>
+											{#{{ form.name() }}#}
+											<input type="text" id="name" name="name" class="form-control" maxlength="100" data-msg-required="Please enter your name." value="">
+										</div>
+										<div class="col-md-6">
+											<label>
+												Your email address <span class="symbol required"></span>
+											</label>
+											<input type="email" id="email" name="email" class="form-control" maxlength="100" data-msg-email="Please enter a valid email address." data-msg-required="Please enter your email address." value="">
+										</div>
+									</div>
+								</div>
+								<div class="row">
+									<div class="form-group">
+										<div class="col-md-12">
+											<label>
+												Subject
+											</label>
+											<input type="text" id="subject" name="subject" class="form-control" maxlength="100" data-msg-required="Please enter the subject." value="">
+										</div>
+									</div>
+								</div>
+								<div class="row">
+									<div class="form-group">
+										<div class="col-md-12">
+											<label>
+												Message <span class="symbol required"></span>
+											</label>
+											<textarea id="message" name="message" class="form-control" rows="10" data-msg-required="Please enter your message." maxlength="5000"></textarea>
+										</div>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-md-12">
+										<input type="submit" data-loading-text="Loading..." class="btn btn-main-color" value="Send Message">
+									</div>
+								</div>
+							</form>
 						</div>
-						<div class="col-sm-6">
-							<ul class="icon-list animate-group">
+						<div class="col-md-6">
+							<h4>Get in touch</h4>
+							<p>
+								Reach out to the Tron Logistics team for any questions you may have.
+							</p>
+							<hr>
+							<h4>Business Hours</h4>
+							<ul class="list-unstyled">
 								<li>
-									<div class="timeline animate" data-animation-options='{"animation":"scaleToBottom", "duration":"300"}'></div>
-									<i class="clip-stack-empty circle-icon circle-teal animate" data-animation-options='{"animation":"flipInY", "duration":"600"}'></i>
-									<div class="icon-list-content">
-										<h4>Decision based by data</h4>
-										<p>
-											Details about the load drive algorithm
-										</p>
-									</div>
+									<i class="icon icon-time"></i> Monday - Friday 9am to 5pm
 								</li>
 								<li>
-									<div class="timeline animate" data-animation-options='{"animation":"scaleToBottom", "duration":"300", "delay": "300"}'></div>
-									<i class="clip-paperplane circle-icon circle-green animate" data-animation-options='{"animation":"flipInY", "duration":"600"}'></i>
-									<div class="icon-list-content">
-										<h4>Relevancy based on business logic</h4>
-										<p>
-											Proprietary dispatch algorithm provides only drivers &amp; equipment that are capable of moving the current load.
-										</p>
-									</div>
+									<i class="icon icon-time"></i> Saturday - Closed
 								</li>
 								<li>
-									<div class="timeline animate" data-animation-options='{"animation":"scaleToBottom", "duration":"300", "delay": "300"}'></div>
-									<i class="clip-droplet circle-icon circle-bricky animate" data-animation-options='{"animation":"flipInY", "duration":"600"}'></i>
-									<div class="icon-list-content">
-										<h4>Assign the right driver</h4>
-										<p>
-											via the correct equipment
-										</p>
-									</div>
+									<i class="icon icon-time"></i> Sunday - Closed
 								</li>
 							</ul>
 						</div>
 					</div>
 				</div>
-			</section>-->
+			</section>
 		</div>
 		<!-- end: MAIN CONTAINER -->
 		<!-- start: FOOTER -->
 		<footer id="footer">
 			<div class="container">
 				<div class="row">
+					<div class="col-md-2"></div>
 					<div class="col-md-3">
 						<div class="newsletter">
-							<h4>Newsletter</h4>
+							<h4>Mailing List</h4>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec hendrerit vehicula est, in consequat.
+								Please sign up to our mailing list to keep updated with new features.
 							</p>
 							<form method="POST" action="#" id="newsletterForm">
 								<div class="input-group">
@@ -263,7 +216,7 @@
 							</form>
 						</div>
 					</div>
-					<div class="col-md-3">
+					<!--<div class="col-md-3">
 						<h4>Latest Tweet</h4>
 						<div class="twitter" id="tweet">
 							<i class="fa fa-twitter"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec hendrerit vehicula est, in consequat.
@@ -271,16 +224,12 @@
 								12 Dec
 							</a>
 						</div>
-					</div>
-					<div class="col-md-4">
+					</div>-->
+					<div class="col-md-2"></div>
+					<div class="col-md-3">
 						<div class="contact-details">
 							<h4>Contact Us</h4>
 							<ul class="contact">
-								<li>
-									<p>
-										<i class="fa fa-map-marker"></i><strong>Address:</strong> 1234 Street Name, City Name, United States
-									</p>
-								</li>
 								<li>
 									<p>
 										<i class="fa fa-phone"></i><strong>Phone:</strong> (123) 456-7890
@@ -289,15 +238,16 @@
 								<li>
 									<p>
 										<i class="fa fa-envelope"></i><strong>Email:</strong>
-										<a href="mailto:mail@example.com">
-											mail@example.com
+										<a href="mailto:contact@tronlogistics.com">
+											contact@tronlogistics.com
 										</a>
 									</p>
 								</li>
 							</ul>
 						</div>
 					</div>
-					<div class="col-md-2">
+					<div class="col-md-2"></div>
+					<!--<div class="col-md-2">
 						<h4>Follow Us</h4>
 						<div class="social-icons">
 							<ul>
@@ -318,23 +268,23 @@
 								</li>
 							</ul>
 						</div>
-					</div>
+					</div>-->
 				</div>
 			</div>
 			<div class="footer-copyright">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-1">
+						<div class="col-md-2">
 							<a class="logo" href="index.html">
-								CLIP<i class="clip-clip"></i>ONE
+								<img src="{{ static('frontend/images/wht_logo_25x25_72ppi.png') }}">
 							</a>
 						</div>
-						<div class="col-md-7">
+						<div class="col-md-6">
 							<p>
-								&copy; Copyright 2014 by Clip-One. All Rights Reserved.
+								&copy; Copyright 2015 by Tron Logistics. All Rights Reserved.
 							</p>
 						</div>
-						<div class="col-md-4">
+						<!--<div class="col-md-4">
 							<nav id="sub-menu">
 								<ul>
 									<li>
@@ -354,14 +304,14 @@
 									</li>
 								</ul>
 							</nav>
-						</div>
+						</div>-->
 					</div>
 				</div>
 			</div>
 		</footer>
 		<a id="scroll-top" href="#"><i class="fa fa-angle-up"></i></a>
 		<!-- end: FOOTER -->
-		<!-- start: MAIN JAVASCRIPTS -->
+		{#<!-- start: MAIN JAVASCRIPTS -->
 		<!--[if lt IE 9]>
 		<script src="{{ static('frontend/plugins/respond.min.js') }}"></script>
 		<script src="{{ static('frontend/plugins/excanvas.min.js') }}"></script>
@@ -386,7 +336,35 @@
 		<script src="{{ static('frontend/plugins/stellar.js/jquery.stellar.min.js') }}"></script>
 		<script src="{{ static('frontend/plugins/colorbox/jquery.colorbox-min.js') }}"></script>
 		<script src="{{ static('frontend/js/index.js') }}"></script>
+		<script src="{{ static('frontend/plugins/flex-slider/jquery.flexslider.js') }}"></script>
+		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+		<script src="{{ static('frontend/plugins/gmaps/gmaps.js') }}"></script>
+		<!-- end: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->#}
+
+		<!-- start: MAIN JAVASCRIPTS -->
+		<!--[if lt IE 9]>
+		<script src="{{ static('frontend/plugins/respond.min.js') }}"></script>
+		<script src="{{ static('frontend/plugins/excanvas.min.js') }}"></script>
+		<script src="{{ static('frontend/plugins/html5shiv.js') }}"></script>
+		<script type="text/javascript" src="{{ static('frontend/plugins/jQuery-lib/1.10.2/jquery.min.js') }}"></script>
+		<![endif]-->
+		<!--[if gte IE 9]><!-->
+		<script src="{{ static('frontend/plugins/jQuery-lib/2.0.3/jquery.min.js') }}"></script>
+		<!--<![endif]-->
+		<script src="{{ static('frontend/plugins/bootstrap/js/bootstrap.min.js') }}"></script>
+		<script src="{{ static('frontend/plugins/jquery.transit/jquery.transit.js') }}"></script>
+		<script src="{{ static('frontend/plugins/hover-dropdown/twitter-bootstrap-hover-dropdown.min.js') }}"></script>
+		<script src="{{ static('frontend/plugins/jquery.appear/jquery.appear.js') }}"></script>
+		<script src="{{ static('frontend/plugins/blockUI/jquery.blockUI.js') }}"></script>
+		<script src="{{ static('frontend/plugins/jquery-cookie/jquery.cookie.js') }}"></script>
+		<script src="{{ static('frontend/js/main.js') }}"></script>
+		<!-- end: MAIN JAVASCRIPTS -->
+		<!-- start: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
+		<script src="{{ static('frontend/plugins/flex-slider/jquery.flexslider.js') }}"></script>
+		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+		<script src="{{ static('frontend/plugins/gmaps/gmaps.js') }}"></script>
 		<!-- end: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
+
 		<script>
 			jQuery(document).ready(function() {
 				Main.init();
