--- a/app/templates/load/view.html
+++ b/app/templates/load/view.html
@@ -16,10 +16,10 @@
 			                	<table class="table table-bordered table-hover table-condensed" id="sample-table-1">
 				                    <thead>
 				                        <tr>
-				                            <th>Details</th>
 				                            <th>Stop #</th>
 				                            <th>Address</th>
 				                            <th>Arrival Date</th>
+				                            <th>Status</th>
 				                            <th>Actions</th>
 				                            <!--<th>Status</th>-->
 				                        </tr>
@@ -27,10 +27,11 @@
 				                    <tbody>
 				                        {% for location in locations|sort(attribute="stop_number") %}
 				                            <tr>
-				                            	<td><a href="#responsive-{{ loop.index }}" data-toggle="modal">View</a></td>
+				                            	<!--<td><a href="#responsive-{{ loop.index }}" data-toggle="modal">View</a></td>-->
 				                            	<td>{{ loop.index }}</td>
 				                            	<td>{{ location.address.address1 }}<br />{{ location.address.city }}, {{ location.address.state }} {{ location.address.postal_code }}</td>
 				                            	<td>{{ location.arrival_date }}</td>
+				                            	<td>{{ location.status }}</td>
 				                            	<td><a href="{{ url_for('.edit_location', load_id=load.id, location_id=location.id) }}">Edit</a>/<a href="{{ url_for('.delete_location', load_id=load.id, location_id=location.id) }}">Delete</a>
 				                            	<!--<td>
 				                            		<input type="hidden" id="location_status-{{ loop.index }}-location_id" name="location_status-{{ loop.index }}-location_id" class="form-control" value="{{ location.id }}">
