Contact Page Update

--- a/app/templates/static/contact.html
+++ b/app/templates/static/contact.html
@@ -119,8 +119,8 @@
 							</div>
 							{% endif %}
 							{% if error %}
-							<div id="contactError" class="alert alert-error">
-								<strong>Error!</strong> There was an error sending your message.
+							<div id="contactError" class="alert alert-danger">
+								<strong>Error!</strong> There was an error sending your message. Try again with all required fields.
 							</div>
 							{% endif %}
 							<h2>Contact Us</h2>
